...
                style="?attr/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:background="?attr/dividerVertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/message_tv"
                app:layout_constraintStart_toEndOf="@id/icon_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/message_tv"
                android:layout_width="match_parent"
...
